--- a/css/mobile.css
+++ b/css/mobile.css
@@ -21,7 +21,7 @@
     #logo{
         display: none;
     }
-	#image1，#image2，#image3{
+	.project-image{
         display: none;
     }
     #header {
